update index.html and styles.css to correct title and center align headings; modify title text and add text alignment styles

--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,7 @@
         padding: 0;
     }
     .title{
+        text-align: center;
         font-size: 6rem;
     }
     .quote{
@@ -431,6 +432,7 @@
             width: 65vw;
         }
         .title{
+            text-align: center;
             font-size: 4rem;
         }
         .quote{
